[package]
name = "rust_benchmark_string_vs_smartstring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartstring = "0.2.9"
smallstring = "0.1.2"
smallstr = "0.2.0"

[profile.release]
# With Link-Time Optimization.
lto = true

# Note: See the performance with and without link-time optimization,
#       it's impressive what lto flag can do, without changing one single
#       lineof code!
#       It will take a little longer to compile in the release build,
#       but that's all.
#       Nice :-) 

# rustflags = ["-C", "target-cpu=native", "-C", "llvm-args=-ffast-math", "-C", "opt-level=3", "-C", "llvm-args=-force-vector-width=16"]

# rustflags = ["target-cpu=native"]

# On my CPU the best performance is without "target-cpu=native" and with only:
#    cargo run --release  